--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,31 +1,30 @@
 {
-  "name": "Pandora Enhancer",
-  "version": "0.0.5.7",
-  "description": "Removes ads and improves Pandora's awesome HTML5 interface.",
-  "background_page": "background.html",
-  "icons": {
-	"16":  "images/logo-16.png",
-	"32":  "images/logo-32.png",
-	"48":  "images/logo-48.png",
-	"128": "images/logo-128.png"
-  },
-  "content_scripts": [
-    {
-      "js": [
-        "js/jquery-1.6.4.min.js",
-	"js/jquery.livequery.min.js",
-	"js/pandora-enhancer.js"
-      ],
-      "matches": [
-        "*://*.pandora.com/*"
-      ],
-      "run_at": "document_end"
-    }
-  ],
-  "page_action":
-    {
-	"default_title"	: "Pandora Enhancer",
-	"default_icon"	: "images/logo-16.png",
-	"default_popup" : "settings.html"
+    "name": "Pandora Enhancer",
+    "version": "0.0.5.7",
+    "description": "Removes ads and improves Pandora's awesome HTML5 interface.",
+    "background_page": "background.html",
+    "icons": {
+        "16": "images/logo-16.png",
+        "32": "images/logo-32.png",
+        "48": "images/logo-48.png",
+        "128": "images/logo-128.png"
+    },
+    "content_scripts": [
+        {
+            "js": [
+                "js/jquery-1.6.4.min.js",
+                "js/jquery.livequery.min.js",
+                "js/pandora-enhancer.js"
+            ],
+            "matches": [
+                "*://*.pandora.com/*"
+            ],
+            "run_at": "document_end"
+        }
+    ],
+    "page_action": {
+        "default_title": "Pandora Enhancer",
+        "default_icon": "images/logo-16.png",
+        "default_popup": "settings.html"
     }
 }
