--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Pandora Enhancer",
     "version": "0.0.5.7",
-    "description": "Removes ads and improves Pandora's awesome HTML5 interface.",
+    "description": "Removes ads, displays song change notifications, and improves Pandora's awesome HTML5 interface.",
     "background_page": "background.html",
     "icons": {
         "16": "images/logo-16.png",
@@ -21,6 +21,9 @@
             ],
             "run_at": "document_end"
         }
+    ],
+    "permissions": [
+        "notifications"
     ],
     "page_action": {
         "default_title": "Pandora Enhancer",
