--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,8 @@
     "name": "Pandora Enhancer",
     "version": "0.5.8",
     "description": "Removes ads, displays song change notifications, and improves Pandora's awesome HTML5 interface.",
-    "background_page": "background.html",
+    "background_page":  "background.html",
+    "options_page":     "settings.html",
     "icons": {
         "16": "images/logo-16.png",
         "32": "images/logo-32.png",
