starting player controls. i added a "click volume button to mute" options that honestly should be on pandora by default (why didn't they do it???)
we need to discuss other stuff.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -24,7 +24,8 @@
         }
     ],
     "permissions": [
-        "notifications"
+        "notifications",
+        "tabs", "http://*.pandora.com/*", "https://*.pandora.com/*"
     ],
     "page_action": {
         "default_title": "Pandora Enhancer",
