player controls 80% functional. mute/unmute needs a re-think of how to implement it. see comments.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -24,8 +24,7 @@
         }
     ],
     "permissions": [
-        "notifications",
-        "tabs", "http://*.pandora.com/*", "https://*.pandora.com/*"
+        "notifications"
     ],
     "page_action": {
         "default_title": "Pandora Enhancer",
