--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,36 +1,38 @@
 {
+    "manifest_version": 2,
     "name": "RadioEnhancer",
     "version": "1.4.0",
     "description": "Removes ads, scrobbles to Last.fm, displays song change notifications, and improves Pandora's awesome HTML5 interface.",
-    "background_page":  "background.html",
+    "background":  { "page": "background.html" },
     "options_page":     "settings.html",
     "icons": {
-        "16": "images/logo-16.png",
-        "32": "images/logo-32.png",
-        "48": "images/logo-48.png",
-        "128": "images/logo-128.png"
+	"16": "images/logo-16.png",
+	"32": "images/logo-32.png",
+	"48": "images/logo-48.png",
+	"128": "images/logo-128.png"
     },
     "content_scripts": [
-        {
-            "js": [
-                "js/jquery-1.6.4.min.js",
-                "js/jquery.livequery.min.js",
+	{
+	    "js": [
+		"js/jquery-1.6.4.min.js",
+		"js/jquery.livequery.min.js",
 				"js/jquery.simulate.js",
-                "js/radio-enhancer.js",
+		"js/radio-enhancer.js",
 				"js/lastfm-api.js"
-            ],
-            "matches": [
-                "*://*.pandora.com/*"
-            ],
-            "run_at": "document_end"
-        }
+	    ],
+	    "matches": [
+		"*://*.pandora.com/*"
+	    ],
+	    "run_at": "document_end"
+	}
     ],
     "permissions": [
-        "notifications"
+	"notifications"
     ],
     "page_action": {
-        "default_title": "RadioEnhancer",
-        "default_icon": "images/logo-16.png",
-        "default_popup": "settings.html"
-    }
+	"default_title": "RadioEnhancer",
+	"default_icon": "images/logo-16.png",
+	"default_popup": "settings.html"
+    },
+    "content_security_policy": "object-src 'self'; script-src 'self' https://ssl.gstatic.com https://ssl.google-analytics.com https://platform.twitter.com https://*.google.com https://connect.facebook.net"
 }
