--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,9 +1,10 @@
 {
-    "manifest_version": 2,
+    /* "manifest_version": 2, */
     "name": "RadioEnhancer",
     "version": "1.4.0",
     "description": "Removes ads, scrobbles to Last.fm, displays song change notifications, and improves Pandora's awesome HTML5 interface.",
-    "background":  { "page": "background.html" },
+    /* "background":  { "page": "background.html" }, */ //manifest 2
+    "background_page" : "background.html",
     "options_page":     "settings.html",
     "icons": {
 	"16": "images/logo-16.png",
@@ -16,9 +17,9 @@
 	    "js": [
 		"js/jquery-1.6.4.min.js",
 		"js/jquery.livequery.min.js",
-				"js/jquery.simulate.js",
+		"js/jquery.simulate.js",
 		"js/radio-enhancer.js",
-				"js/lastfm-api.js"
+		"js/lastfm-api.js"
 	    ],
 	    "matches": [
 		"*://*.pandora.com/*"
@@ -33,6 +34,6 @@
 	"default_title": "RadioEnhancer",
 	"default_icon": "images/logo-16.png",
 	"default_popup": "settings.html"
-    },
-    "content_security_policy": "object-src 'self'; script-src 'self' https://ssl.gstatic.com https://ssl.google-analytics.com https://platform.twitter.com https://*.google.com https://connect.facebook.net"
+    }
+    /* "content_security_policy": "object-src 'self'; script-src 'self' https://ssl.gstatic.com https://ssl.google-analytics.com https://platform.twitter.com https://*.google.com https://connect.facebook.net" */
 }
